# weekend

./: .gitignore  README.md
contest-problems/usaco/: 2.txt  psyho.cpp  subseq_reversal.cpp
java-map/: README.md  pom.xml  script.sh
java-map/src/main/java/com/ankitsultana/: Main.java
llvm-experiment/: .gitignore  fourth.cpp  run.sh  second.cpp  third.cpp  toy.cpp
roaring/: pom.xml
roaring/src/main/java/com/ankitsultana/: Main.java
roaring/src/main/java/com/ankitsultana/experiments/: Main.java  README.md
roaring/src/main/resources/: log4j2.xml
rust-experiments/codeforces/src/: main.rs
rust-experiments/object-store/: Cargo.toml  README.md
rust-experiments/object-store/src/: main.rs  s3.rs  storage.rs
rust-experiments/rust-learn/: Cargo.toml
rust-experiments/rust-learn/src/: main.rs  two.rs
rust-experiments/school/: README.md
rust-experiments/school/src/: main.rs  seg_tree.rs
rust-experiments/tantivy-exp/: Cargo.toml
rust-experiments/tantivy-exp/src/: main.rs
rust-experiments/tpool/: Cargo.toml
rust-experiments/tpool/src/: main.rs
text/: pom.xml
text/data/: test.txt
text/src/main/java/com/ankitsultana/: Main.java
zig-playground/: main.zig
zig-playground/src/: main.zig  ringbuffer.zig  th.zig
